Bug 480169 - Cannot delete a file using the Del key on the NumPad
Summary: Cannot delete a file using the Del key on the NumPad
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Desktop icons & Folder View widget (other bugs)
Version First Reported In: 5.27.9
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-01-22 14:28 UTC by popov895
Modified: 2024-01-23 18:13 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2024-01-22 14:28:04 UTC
SUMMARY

Cannot delete a file using the Del key on the NumPad. Both Plasma 5 and Plasma 6 are affected, but only on X11.

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20240119
KDE Plasma Version: 5.27.10
KDE Frameworks Version: 5.114.0
Qt Version: 5.15.12
Graphics Platform: X11
Comment 1 Bug Janitor Service 2024-01-22 15:26:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1993
Comment 2 Nate Graham 2024-01-23 17:58:10 UTC
Git commit 9857d8e523309df88105bf6dfd8a8f8e4f41c075 by Nate Graham, on behalf of Eugene Popov.
Committed on 23/01/2024 at 18:58.
Pushed by ngraham into branch 'master'.

Folder View: Fix handling of numpad keys

On X11, all events from numpad keys come with the Qt::KeypadModifier
keyboard modifier. We should take this into account when handling
keyboard shortcuts.
FIXED-IN: 6.0

M  +1    -1    containments/desktop/plugins/folder/shortcut.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/9857d8e523309df88105bf6dfd8a8f8e4f41c075
Comment 3 Nate Graham 2024-01-23 18:13:39 UTC
Git commit 028240da9c071d39e1cebfedd5b3f5626619e930 by Nate Graham, on behalf of Eugene Popov.
Committed on 23/01/2024 at 19:13.
Pushed by ngraham into branch 'Plasma/6.0'.

Folder View: Fix handling of numpad keys

On X11, all events from numpad keys come with the Qt::KeypadModifier
keyboard modifier. We should take this into account when handling
keyboard shortcuts.
FIXED-IN: 6.0


(cherry picked from commit 9857d8e523309df88105bf6dfd8a8f8e4f41c075)

M  +1    -1    containments/desktop/plugins/folder/shortcut.cpp

https://invent.kde.org/plasma/plasma-desktop/-/commit/028240da9c071d39e1cebfedd5b3f5626619e930