Folder View: Fix handling of numpad keys

On X11, all events from numpad keys come with the Qt::KeypadModifier
keyboard modifier. We should take this into account when handling
keyboard shortcuts.

BUG: 480169
FIXED-IN: 6.0